@@ -8,6 +8,7 @@ Release 2.0
 #182 Support for "mapBy" at the top level of request
 #184 Metadata request: related entity type is NULL for POJO related entities
 #185 Store information about the target entity in LrRelationship
+#188 ExecutorService service 
 
 Release 1.24
 
